Fix errant emoji text wrapping

--- a/public/app.css
+++ b/public/app.css
@@ -139,6 +139,7 @@ button:focus {
 }
 
 #emoji-text {
+  width: 110%;
   text-align: center;
   text-transform: uppercase;
   color: transparent;
